Add links for the guides

--- a/web/views/partials/footer.hbs
+++ b/web/views/partials/footer.hbs
@@ -4,11 +4,19 @@
 		<p>
 			FINRA short sale volume parser
 		</p>
+		<p class="support-block">
+			<a href="https://samgozman.gitbook.io/investing/tightshorts/about-project" target="_blank" rel="nofollow"
+				rel="noreferrer" rel="noopener">
+				<button class="button is-info is-outlined">
+					<ion-icon name="book-outline"></ion-icon> Tight Shorts guide
+				</button>
+			</a>
+		</p>
 		<p>
 			<strong>TightShorts.ru</strong> by <a href="https://github.com/samgozman" target="_blank" rel="nofollow"
 				rel="noreferrer" rel="noopener">samgozman</a>. <br>
-			Tinkoff Pulse: <a href="https://www.tinkoff.ru/invest/social/profile/aqua_disco/" target="_blank"
-				rel="nofollow" rel="noreferrer" rel="noopener">aqua_disco</a>.
+			Tinkoff Pulse: <a href="https://www.tinkoff.ru/invest/social/profile/aqua_disco/" target="_blank" rel="nofollow"
+				rel="noreferrer" rel="noopener">aqua_disco</a>.
 		</p>
 		<p id="support">
 			Support TightShorts <ion-icon name="cash-outline"></ion-icon>
@@ -19,8 +27,8 @@
 					<ion-icon name="logo-paypal"></ion-icon> PayPal
 				</button>
 			</a>
-			<a href="https://www.tinkoff.ru/rm/gozman.semen1/Ol0PS3882" target="_blank" rel="nofollow"
-				rel="noreferrer" rel="noopener">
+			<a href="https://www.tinkoff.ru/rm/gozman.semen1/Ol0PS3882" target="_blank" rel="nofollow" rel="noreferrer"
+				rel="noopener">
 				<button class="button is-dark is-outlined">
 					<ion-icon name="card-outline"></ion-icon> Tinkoff
 				</button>
