--- a/web/views/partials/help.hbs
+++ b/web/views/partials/help.hbs
@@ -5,6 +5,17 @@
 		<button class="delete" aria-label="close"></button>
 	</header>
 	<section class="modal-card-body content">
+		<p>
+			<strong>
+				If you do not understand what all this means, then I recommend reading my guides for this service:
+			</strong>
+		</p>
+		<ul>
+			<li><a href="https://samgozman.gitbook.io/investing/#guides-in-english" target="_blank"
+					rel="noopener noreferrer">🇬🇧 Guides in English for TightShorts</a></li>
+			<li><a href="https://samgozman.gitbook.io/investing/#gaidy-na-russkom" target="_blank"
+					rel="noopener noreferrer">🇷🇺 Гайды на русском для TightShorts</a></li>
+		</ul>
 		<p>Short volume is the number of shares that have been borrowed to open short positions
 			(when you sell one or more shares of a stock that you don’t own).</p>
 		<p>TightShorts.ru aggregates data from FINRA and presents it in an easy-to-use way.</p>
