--- a/web/views/partials/navbar.hbs
+++ b/web/views/partials/navbar.hbs
@@ -19,14 +19,17 @@
 			<a class="navbar-item {{#if isScreener}}is-active{{/if}}" href="/screener">
 				<ion-icon name="options-outline"></ion-icon> Screener
 			</a>
+			<a class="navbar-item" href="https://samgozman.gitbook.io/investing/tightshorts/about-project" target="_blank"
+				rel="noopener noreferrer">
+				<ion-icon name="book-outline"></ion-icon>Guide
+			</a>
 			<a class="navbar-item" href="https://short-fork.herokuapp.com/" id="menu_shortfork">
 				<ion-icon name="open-outline"></ion-icon>Short Fork
 			</a>
 			<a class="navbar-item modal-button is-hidden-desktop" data-target="help-modal">
 				<ion-icon name="information-circle-outline"></ion-icon> What is it all about?
 			</a>
-			<a class="navbar-item modal-button is-hidden-desktop" href="https://t.me/tightshorts_bot"
-				target="_blank">
+			<a class="navbar-item modal-button is-hidden-desktop" href="https://t.me/tightshorts_bot" target="_blank">
 				<ion-icon name="flash-outline"></ion-icon> Telegram bot
 			</a>
 			<div class="navbar-item has-dropdown is-hoverable">
@@ -35,20 +38,20 @@
 				</a>
 
 				<div class="navbar-dropdown">
-					<a class="navbar-item" href="https://t.me/samgozman" target="_blank" rel="nofollow"
-						rel="noreferrer" rel="noopener">
+					<a class="navbar-item" href="https://t.me/samgozman" target="_blank" rel="nofollow" rel="noreferrer"
+						rel="noopener">
 						<ion-icon name="send-outline"></ion-icon> Telegram
 					</a>
-					<a class="navbar-item" href="https://www.tinkoff.ru/invest/social/profile/aqua_disco/"
-						target="_blank" rel="nofollow" rel="noreferrer" rel="noopener">
+					<a class="navbar-item" href="https://www.tinkoff.ru/invest/social/profile/aqua_disco/" target="_blank"
+						rel="nofollow" rel="noreferrer" rel="noopener">
 						<ion-icon name="pulse-outline"></ion-icon> Tinkoff Pulse
 					</a>
 					<a class="navbar-item" href="#support">
 						<ion-icon name="cash-outline"></ion-icon> Support Project
 					</a>
 					<hr class="navbar-divider">
-					<a class="navbar-item" href="https://github.com/samgozman/tightshorts/issues" target="_blank"
-						rel="nofollow" rel="noreferrer" rel="noopener">
+					<a class="navbar-item" href="https://github.com/samgozman/tightshorts/issues" target="_blank" rel="nofollow"
+						rel="noreferrer" rel="noopener">
 						<ion-icon name="bug-outline"></ion-icon> Report an issue
 					</a>
 				</div>
@@ -58,8 +61,8 @@
 	</div>
 	<div class="navbar-end">
 		<div class="navbar-item">
-			<a class="button is-light is-hidden-touch" id="tgbot" href="https://t.me/tightshorts_bot"
-				target="_blank" title="Telegram Bot">
+			<a class="button is-light is-hidden-touch" id="tgbot" href="https://t.me/tightshorts_bot" target="_blank"
+				title="Telegram Bot">
 				<ion-icon name="flash-outline" style="color: #0088cc"></ion-icon>
 			</a>
 		</div>
