Prettier hbs fix

--- a/web/views/partials/cookie.hbs
+++ b/web/views/partials/cookie.hbs
@@ -1,6 +1,6 @@
 <!-- Cookie message -->
 <div class="cookie-message hide" id="cookie-message">
-	<img src="/img/cookie.png">
+	<img src="/img/cookie.png" />
 	<span>We use cookies for server authentication to get access for stocks data and to improve your browsing
 		experience on our website.</span>
 	<button id="cookie-close" class="delete" aria-label="close"></button>
