--- a/web/views/partials/head.hbs
+++ b/web/views/partials/head.hbs
@@ -1,54 +1,34 @@
 <!-- Meta -->
-<meta charset="UTF-8">
-<meta name="description" content="US stocks short volume, short volume ratio, short exempt volume.">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="csrf-token" content="{{ csrf }}">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">  
+<meta charset="UTF-8" />
+<meta name="description" content="US stocks short volume, short volume ratio, short exempt volume." />
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<meta name="csrf-token" content="{{csrf}}" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <meta name="yandex-verification" content="1cab4cdc34b37061" />
 <!-- Yandex.Metrika counter -->
 <script type="text/javascript">
-(function (d, w, c) {
-	(w[c] = w[c] || []).push(function () {
-		try {
-			w.yaCounter78914581 = new Ya.Metrika({
-				id: 78914581,
-				clickmap: true,
-				trackLinks: true,
-				accurateTrackBounce: true
-			});
-		} catch (e) {}
-	});
-
-	var n = d.getElementsByTagName("script")[0],
-		s = d.createElement("script"),
-		f = function () {
-			n.parentNode.insertBefore(s, n);
-		};
-	s.type = "text/javascript";
-	s.async = true;
-	s.src = "https://mc.yandex.ru/metrika/watch.js";
-
-	if (w.opera == "[object Opera]") {
-		d.addEventListener("DOMContentLoaded", f, false);
-	} else {
-		f();
-	}
-})(document, window, "yandex_metrika_callbacks");
+	(function (d, w, c) { (w[c] = w[c] || []).push(function () { try { w.yaCounter78914581 = new Ya.Metrika({
+	id: 78914581, clickmap: true, trackLinks: true, accurateTrackBounce: true }); } catch (e) {} }); var n =
+	d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () {
+	n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src =
+	"https://mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") {
+	d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window,
+	"yandex_metrika_callbacks");
 </script>
 <noscript>
-<div><img src="https://mc.yandex.ru/watch/78914581" style="position:absolute; left:-9999px;" alt="" /></div>
+	<div><img src="https://mc.yandex.ru/watch/78914581" style="position:absolute; left:-9999px;" alt="" /></div>
 </noscript>
 <!-- /Yandex.Metrika counter -->
 <!-- Favicon -->
-<link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/img/favicon/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/img/favicon/favicon-16x16.png">
-<link rel="mask-icon" href="/img/favicon/safari-pinned-tab.svg" color="#26a69a">
-<link rel="shortcut icon" href="/img/favicon/favicon.ico">
-<meta name="theme-color" content="#ffffff">
+<link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-touch-icon.png" />
+<link rel="icon" type="image/png" sizes="32x32" href="/img/favicon/favicon-32x32.png" />
+<link rel="icon" type="image/png" sizes="16x16" href="/img/favicon/favicon-16x16.png" />
+<link rel="mask-icon" href="/img/favicon/safari-pinned-tab.svg" color="#26a69a" />
+<link rel="shortcut icon" href="/img/favicon/favicon.ico" />
+<meta name="theme-color" content="#ffffff" />
 <!-- Styles -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
-<link rel="stylesheet" href="/css/styles.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css" />
+<link rel="stylesheet" href="/css/styles.css" />
 <!-- Fonts -->
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule="" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
