--- a/web/views/partials/footer.hbs
+++ b/web/views/partials/footer.hbs
@@ -5,32 +5,60 @@
 			FINRA short sale volume parser
 		</p>
 		<p class="support-block">
-			<a href="https://samgozman.gitbook.io/investing/tightshorts/about-project" target="_blank" rel="nofollow"
-				rel="noreferrer" rel="noopener">
+			<a
+				href="https://samgozman.gitbook.io/investing/tightshorts/about-project"
+				target="_blank"
+				rel="nofollow"
+				rel="noreferrer"
+				rel="noopener"
+			>
 				<button class="button is-info is-outlined">
-					<ion-icon name="book-outline"></ion-icon> Tight Shorts guide
+					<ion-icon name="book-outline"></ion-icon>
+					Tight Shorts guide
 				</button>
 			</a>
 		</p>
 		<p>
-			<strong>TightShorts.ru</strong> by <a href="https://github.com/samgozman" target="_blank" rel="nofollow"
-				rel="noreferrer" rel="noopener">samgozman</a>. <br>
-			Tinkoff Pulse: <a href="https://www.tinkoff.ru/invest/social/profile/aqua_disco/" target="_blank" rel="nofollow"
-				rel="noreferrer" rel="noopener">aqua_disco</a>.
+			<strong>TightShorts.ru</strong>
+			by
+			<a
+				href="https://github.com/samgozman"
+				target="_blank"
+				rel="nofollow"
+				rel="noreferrer"
+				rel="noopener"
+			>samgozman</a>.
+			<br />
+			Tinkoff Pulse:
+			<a
+				href="https://www.tinkoff.ru/invest/social/profile/aqua_disco/"
+				target="_blank"
+				rel="nofollow"
+				rel="noreferrer"
+				rel="noopener"
+			>aqua_disco</a>.
 		</p>
 		<p id="support">
-			Support TightShorts <ion-icon name="cash-outline"></ion-icon>
+			Support TightShorts
+			<ion-icon name="cash-outline"></ion-icon>
 		</p>
 		<p class="support-block">
 			<a href="https://paypal.me/samgozman" target="_blank" rel="nofollow" rel="noreferrer" rel="noopener">
 				<button class="button is-link is-outlined">
-					<ion-icon name="logo-paypal"></ion-icon> PayPal
+					<ion-icon name="logo-paypal"></ion-icon>
+					PayPal
 				</button>
 			</a>
-			<a href="https://www.tinkoff.ru/rm/gozman.semen1/Ol0PS3882" target="_blank" rel="nofollow" rel="noreferrer"
-				rel="noopener">
+			<a
+				href="https://www.tinkoff.ru/rm/gozman.semen1/Ol0PS3882"
+				target="_blank"
+				rel="nofollow"
+				rel="noreferrer"
+				rel="noopener"
+			>
 				<button class="button is-dark is-outlined">
-					<ion-icon name="card-outline"></ion-icon> Tinkoff
+					<ion-icon name="card-outline"></ion-icon>
+					Tinkoff
 				</button>
 			</a>
 		</p>
@@ -40,14 +68,26 @@
 <!-- Footer: ends -->
 
 <!-- Octocat -->
-<a href="https://github.com/samgozman/tightshorts" target="_blank" rel="nofollow" rel="noreferrer" rel="noopener">
+<a
+	href="https://github.com/samgozman/tightshorts"
+	target="_blank"
+	rel="nofollow"
+	rel="noreferrer"
+	rel="noopener"
+>
 	<svg class="octocat" viewBox="0 0 250 250">
 		<path transform="rotate(90 125 125)" d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
-		<path transform="rotate(90 125 125)" class="octocat-arm"
-			d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2">
+		<path
+			transform="rotate(90 125 125)"
+			class="octocat-arm"
+			d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2"
+		>
 		</path>
-		<path transform="rotate(90 125 125)" class="octocat-body"
-			d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z">
+		<path
+			transform="rotate(90 125 125)"
+			class="octocat-body"
+			d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z"
+		>
 		</path>
 	</svg>
 </a>
