Add search field for screener #48

--- a/web/views/screener.hbs
+++ b/web/views/screener.hbs
@@ -8,6 +8,7 @@
 		</div>
 		<div class="columns">
 			<div class="column is-three-quarters">
+				{{>screener_form}}
 				{{>screener_table}}
 				{{>screener_pagination}}
 			</div>
