Change short-fork address

--- a/web/views/partials/navbar.hbs
+++ b/web/views/partials/navbar.hbs
@@ -23,7 +23,7 @@
 				rel="noopener noreferrer">
 				<ion-icon name="book-outline"></ion-icon>Guide
 			</a>
-			<a class="navbar-item" href="https://short-fork.up.railway.app/" id="menu_shortfork">
+			<a class="navbar-item" href="https://short-fork.extr.app/" id="menu_shortfork">
 				<ion-icon name="open-outline"></ion-icon>Short Fork
 			</a>
 			<a class="navbar-item modal-button is-hidden-desktop" data-target="help-modal">
