--- a/web/views/partials/footer.hbs
+++ b/web/views/partials/footer.hbs
@@ -19,7 +19,7 @@
 			</a>
 		</p>
 		<p>
-			<strong>TightShorts.ru</strong>
+			<strong>TightShorts.extr.app</strong>
 			by
 			<a
 				href="https://github.com/samgozman"
