--- a/web/views/partials/help.hbs
+++ b/web/views/partials/help.hbs
@@ -18,7 +18,7 @@
 		</ul>
 		<p>Short volume is the number of shares that have been borrowed to open short positions
 			(when you sell one or more shares of a stock that you don’t own).</p>
-		<p>TightShorts.ru aggregates data from FINRA and presents it in an easy-to-use way.</p>
+		<p>TightShorts.extr.app aggregates data from FINRA and presents it in an easy-to-use way.</p>
 		<h4>Terminology</h4>
 		<ol>
 			<li> <strong>Volume, Total Volume (Vol or TV)</strong> - number of shares of all
