replace yandex counter with umami

--- a/web/views/partials/head.hbs
+++ b/web/views/partials/head.hbs
@@ -5,20 +5,11 @@
 <meta name="csrf-token" content="{{csrf}}" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <meta name="yandex-verification" content="1cab4cdc34b37061" />
-<!-- Yandex.Metrika counter -->
-<script type="text/javascript">
-	(function (d, w, c) { (w[c] = w[c] || []).push(function () { try { w.yaCounter78914581 = new Ya.Metrika({
-	id: 78914581, clickmap: true, trackLinks: true, accurateTrackBounce: true }); } catch (e) {} }); var n =
-	d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () {
-	n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src =
-	"https://mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") {
-	d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window,
-	"yandex_metrika_callbacks");
-</script>
-<noscript>
-	<div><img src="https://mc.yandex.ru/watch/78914581" style="position:absolute; left:-9999px;" alt="" /></div>
-</noscript>
-<!-- /Yandex.Metrika counter -->
+<script
+	async
+	src="https://umami.host.extr.app/script.js"
+	data-website-id="42d22e80-6c98-4c89-932b-9516e6c9f898"
+></script>
 <!-- Favicon -->
 <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-touch-icon.png" />
 <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon/favicon-32x32.png" />
